--- a/src/components/ThemeSwitcher/ThemeSwitcher.scss
+++ b/src/components/ThemeSwitcher/ThemeSwitcher.scss
@@ -1,7 +1,7 @@
 .theme-switcher {
-  position: absolute;
-  bottom: 20px;
-  left: 16%;
+  // position: absolute;
+  // bottom: 20px;
+  // left: 16%;
 
   #checkbox {
     display: none;
