--- a/src/container/layout/Layout/Layout.scss
+++ b/src/container/layout/Layout/Layout.scss
@@ -10,7 +10,7 @@
 
   .layout-right-section-menu {
     margin-top: 80px;
-    padding: 40px;
+    padding: 40px 20px;
     width: calc(100% - 240px);
     margin-left: 240px;
     min-height: 100%;
