--- a/src/styles/themes/muiTheme.scss
+++ b/src/styles/themes/muiTheme.scss
@@ -1,8 +1,8 @@
 $muiTheme: (
   primary: (
-    main: #5543e8,
+    main: #48b494,
     light: #d6ccfd,
-    dark: #4434c9,
+    dark: #327d67,
     contrastText: #fff,
   ),
   secondary: (
@@ -54,11 +54,11 @@ $muiTheme: (
 
     // Light Theme
     light-border: #bdbdbd,
-    light-background: #f2f4f8,
-    light-text-color: #111827,
-    light-hover-color: #e8e8e8,
-    light-hover-text-color: #111827,
-    light-description-color: #575757,
+    light-background: #F6F6F8,
+    light-text-color: #191919,
+    light-hover-color: #48b494,
+    light-hover-text-color: white,
+    light-description-color: #A5AAB4,
     light-container-bg-color: #ffffff,
 
     50: #fafafa,
