--- a/src/container/layout/components/Sidebar/Sidebar.scss
+++ b/src/container/layout/components/Sidebar/Sidebar.scss
@@ -6,9 +6,7 @@
   padding: 24px 16px;
   background-color: var(--container-bg-color);
   // border-right: 1px solid var(--border-color);
-  transition:
-    width,
-    min-width 0.3s ease-in-out;
+  transition: width, min-width 0.3s ease-in-out;
   position: fixed;
   left: 0;
   white-space: nowrap;
@@ -47,7 +45,7 @@
       .accordion-container-header.container-bg {
         background-color: transparent;
         border-color: transparent;
-        padding: 8px 8px 8px 16px;
+        padding: 12px 8px 12px 16px;
         .truncate-text {
           display: inline-flex;
           width: auto !important;
@@ -57,27 +55,34 @@
           }
         }
       }
-      // &.active .accordion-container-header {
-      //   color: var(--hovered-text-color);
-      //   background: var(--bg-hover-color);
-      //   .sidebar-container__menu__link__title {
-      //     color: var(--hovered-text-color);
-      //   }
-      //   .header-icon svg {
-      //     fill: var(--hovered-text-color);
-      //   }
-      // }
+      &.active .accordion-container-header {
+        color: var(--color-common-main);
+        background: #d1ede4b6;
+        .sidebar-container__menu__link__title {
+          color: var(--color-common-main);
+        }
+        .header-icon svg {
+          fill: var(--color-common-main);
+        }
+      }
       .accordion-container-description {
-        padding: 16px 0px 16px 8px !important;
+        margin-top: 16px;
+        padding: 0px 0px 0px 8px !important;
+        margin-left: 12px;
+        border-left: 1px solid #d1ede4b6;
       }
     }
 
     &__link {
-      padding: 8px 8px 8px 16px;
+      padding: 12px 8px 12px 16px;
       border-radius: 7px;
       cursor: pointer;
       font-weight: 500;
-      color: var(--color-common-main);
+      color: var(--text-description-color);
+
+      svg{
+        font-size: 20px;
+      }
 
       &.active,
       &:hover {
