--- a/src/container/layout/components/TopBar/TopBar.scss
+++ b/src/container/layout/components/TopBar/TopBar.scss
@@ -1,25 +1,25 @@
 .topbar-container {
-  height: 80px;
-  width: 100%;
-  padding: 0px 24px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: fixed;
   top: 0px;
   right: 0px;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  position: fixed;
   z-index: 9999999;
+  padding: 0px 16px;
+  align-items: center;
+  justify-content: space-between;
   background-color: var(--container-bg-color);
   // border-bottom: 1px solid var(--border-color);
 }
 
 .humbarger-icon {
+  gap: 2px;
   width: 20px;
   display: flex;
-  flex-direction: column;
-  gap: 2px;
   cursor: pointer;
   position: absolute;
+  flex-direction: column;
   left: 20px;
   .line {
     transition: width 0.3s ease-in-out;
@@ -31,7 +31,7 @@
 
 .topbar-content {
   width: 100%;
-  padding: 0px 60px;
+  padding: 0px 20px;
 }
 
 .collapsed ~ .layout-right-section .topbar-container .humbarger-icon {
@@ -62,13 +62,22 @@
   }
 }
 
+.profile-dropdown-list {
+  &__header {
+    gap: 8px;
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+  }
+}
+
 .brand-icon {
-  width: 180px;
+  width: 100px;
   cursor: pointer;
 
   &.auth-container {
     cursor: auto;
-    width: 200px;
+    width: 120px;
   }
 }
 
