--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,17 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@font-face {
+  font-family: 'Acumin Pro';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../assets/fonts/Acumin-RPro.woff') format('woff');
+}
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Inter";
   font-size: 16px;
+  font-family: 'Acumin Pro', sans-serif;
 }
 
 body {
   width: 100vw;
   max-width: 100%;
-  height:100vh;
+  height: 100vh;
   max-height: 100%;
   background-color: rgb(241, 241, 241);
   &::-webkit-scrollbar {
@@ -19,7 +24,7 @@ body {
   }
 }
 
-#root{
+#root {
   height: 100%;
   width: 100%;
 }
@@ -45,7 +50,6 @@ p {
   padding: 0px;
 }
 
-
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
@@ -62,35 +66,33 @@ select:-webkit-autofill:focus {
   -webkit-text-fill-color: var(--color-common-main);
 }
 
-
-
 @media screen and (max-width: 1900px) {
-  *{
+  * {
     font-size: 14px;
   }
 }
 @media screen and (max-width: 1300px) {
-  *{
+  * {
     font-size: 14px;
   }
 }
 @media screen and (max-width: 1150px) {
-  *{
+  * {
     font-size: 13px;
   }
 }
 @media screen and (max-width: 1150px) {
-  *{
+  * {
     font-size: 16px;
   }
 }
 @media screen and (max-width: 650px) {
-  *{
+  * {
     font-size: 14px;
   }
 }
 @media screen and (max-width: 550px) {
-  *{
+  * {
     font-size: 12px;
   }
 }
