--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -2,7 +2,7 @@
   font-family: 'Acumin Pro';
   font-style: normal;
   font-weight: 400;
-  src: url('../assets/fonts/Acumin-RPro.woff') format('woff');
+  src: url('@/assets/fonts/Acumin-RPro.woff') format('woff');
 }
 
 * {
