--- a/src/styles/themes/muiTheme.scss
+++ b/src/styles/themes/muiTheme.scss
@@ -58,7 +58,7 @@ $muiTheme: (
     light-text-color: #191919,
     light-hover-color: #48b494,
     light-hover-text-color: white,
-    light-description-color: #A5AAB4,
+    light-description-color: #7c7c7ce0,
     light-container-bg-color: #ffffff,
 
     50: #fafafa,
