--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -12,7 +12,7 @@ input.hide-number-increment::-webkit-inner-spin-button {
 }
 
 .Toastify {
-  z-index: 9999999999999999;
+  z-index: 11;
   position: relative;
 }
 
@@ -22,6 +22,7 @@ input.hide-number-increment::-webkit-inner-spin-button {
 
 .pointer-icon-fill {
   cursor: pointer;
+
   svg {
     fill: gray;
   }
@@ -29,6 +30,7 @@ input.hide-number-increment::-webkit-inner-spin-button {
 
 .pointer-icon-stroke {
   cursor: pointer;
+
   svg {
     path {
       stroke: gray;
