--- a/src/container/layout/components/Menu/Menu.scss
+++ b/src/container/layout/components/Menu/Menu.scss
@@ -6,7 +6,7 @@
   display: none;
 }
 
-.open ~ .submenu-list {
+.open~.submenu-list {
   transition: all 0.3s ease-in-out;
   display: flex;
   flex-direction: column;
@@ -15,7 +15,7 @@
   min-width: 240px;
   background: #ebf5ff;
   box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.06);
-  z-index: 9999999;
+  z-index: 10;
   left: 240px;
 
   &.nested-list {
@@ -25,11 +25,13 @@
     left: 0px;
     transition: all 0.3s ease-in-out;
   }
+
   &.submenu-collapsed:not(.nested-list) {
     left: 80px;
   }
 }
-.collapsed .open ~ .submenu-list {
+
+.collapsed .open~.submenu-list {
   left: 80px;
 }
 
@@ -39,6 +41,7 @@
   padding: 8px;
   border-radius: 7px;
   padding-left: 16px;
+
   &:hover {
     background: colorMapper(primary, main);
     color: white;
@@ -49,9 +52,11 @@
   .menu-icon svg {
     stroke: white;
   }
+
   .submenu-heading-title {
     color: white;
   }
+
   .dropdown-arrow svg {
     fill: white;
   }
@@ -78,6 +83,7 @@
     margin-left: 0px;
     color: var(--color-common-main);
   }
+
   img {
     height: 1em;
     width: 1em;
@@ -93,6 +99,7 @@
     margin-right: 8px;
     position: relative;
     z-index: 100;
+
     svg {
       height: 1.2em;
       width: 1.2em;
@@ -125,6 +132,7 @@
   img {
     margin-right: 0px;
   }
+
   &-title {
     opacity: 0;
     visibility: hidden;
@@ -145,6 +153,7 @@
     vertical-align: middle;
     margin-right: 8px;
   }
+
   &-title {
     opacity: 1;
     visibility: visible;
@@ -156,6 +165,7 @@
   img {
     margin-right: 0px;
   }
+
   &-title {
     opacity: 0;
     visibility: hidden;
@@ -169,6 +179,7 @@
   top: 50%;
   transform: translateY(-50%);
   transform-origin: center;
+
   svg {
     width: 13px;
     height: 13px;
@@ -185,17 +196,20 @@
     svg {
       height: 1.2em;
       width: 1.2em;
+
       path {
         fill: white;
         stroke: white;
       }
     }
   }
+
   .dropdown-arrow {
     svg {
       fill: white;
     }
   }
+
   .submenu-heading-title {
     color: white;
   }
