--- a/src/container/layout/components/TopBar/TopBar.scss
+++ b/src/container/layout/components/TopBar/TopBar.scss
@@ -5,7 +5,7 @@
   height: 80px;
   display: flex;
   position: fixed;
-  z-index: 9999999;
+  z-index: 12;
   padding: 0px 16px;
   align-items: center;
   justify-content: space-between;
@@ -21,6 +21,7 @@
   position: absolute;
   flex-direction: column;
   left: 20px;
+
   .line {
     transition: width 0.3s ease-in-out;
     width: 100%;
@@ -34,7 +35,7 @@
   padding: 0px 20px;
 }
 
-.collapsed ~ .layout-right-section .topbar-container .humbarger-icon {
+.collapsed~.layout-right-section .topbar-container .humbarger-icon {
   .line {
     &:nth-of-type(even) {
       transition: width 0.3s ease-in-out;
@@ -47,14 +48,17 @@
   .dropdown-menu {
     padding: 16px 0px;
     min-width: 350px;
+
     li {
       margin: 10px 0px;
       min-height: 48px;
       display: flex;
       align-items: center;
+
       .body-text {
         font-size: 14px;
       }
+
       .user-name {
         font-size: 16px;
       }
@@ -68,6 +72,7 @@
       fill: colorMapper(grayClr, 600);
     }
   }
+
   &__header {
     gap: 8px;
     display: flex;
