--- a/src/container/sites/pages/SiteOverview/SiteOverview.scss
+++ b/src/container/sites/pages/SiteOverview/SiteOverview.scss
@@ -2,26 +2,44 @@
   .top-container {
     position: relative;
   }
+
   .checklist__item {
     padding: 20px;
+    border-radius: 5px;
+
     .item-icon,
     .checkmark-icon {
       font-size: 24px;
     }
+
     .item-icon {
       color: colorMapper(primary, main);
     }
+
     .checkmark-icon {
       color: colorMapper(success, main);
+
       &.watch {
         color: var(--color-main-common);
       }
     }
+
+    .rotating-icon {
+      display: inline-block;
+      animation: rotate_progress 2s linear infinite;
+    }
+
+    &.error {
+      border: 1px solid red;
+      background-color: rgb(255, 188, 188);
+    }
+
     .body-text {
       color: var(--color-main-common) !important;
       font-weight: 500 !important;
       font-size: 16px !important;
     }
+
   }
 
   .keywords-ranking-detail {
@@ -42,11 +60,13 @@
     &__left-container {
       border-right: 1px solid var(--border-color);
       padding-right: 20px;
+
       &__count {
         color: var(--color-main-common) !important;
         font-size: 2.43em;
         font-weight: 500;
       }
+
       .btn {
         align-self: flex-end;
       }
@@ -54,8 +74,10 @@
 
     &__right-container {
       padding-left: 20px;
+
       &__batch {
         padding: 8px;
+
         &__count {
           color: var(--color-main-common) !important;
           font-size: 1.3em;
@@ -72,4 +94,14 @@
 
 .light .recommendations-overview__right-container__batch {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+@keyframes rotate_progress {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
